Van horizontal nav naar vertical, en verandering in kleur grijs + zwart naar geel + wit.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
   </head>
 
 <body>
-  <div class="dropdown">
-    <button class="dropbtn">Menu</button>
-    <div class="dropdown-content">
-    <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">Main</a>
-    <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">Badges</a>
-    <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact</a>
-    </div>
-  </div>
+  <ul>
+    <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">Main</a></li>
+    <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">Badges</a></li>
+    <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact</a></li>
+  </ul>
 
 </body>
 </html>
