nieuwe sidebar (alweer) + ik wil gradient

--- a/Badges.html
+++ b/Badges.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
-
-
-    <title> About Me </title>
-  </head>
-
+      <link rel="stylesheet" href="style.css">
+    </head>
 <body>
-  <ul>
-    <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">Main</a></li>
-    <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">Badges</a></li>
-    <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact</a></li>
-  </ul>
+<div class="sidebar">
+<a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a>
+<a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My work</a>
+<a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact me</a>
 
+</div>
+<div class="main">
+<h3>text</h3>
+
+</div>
 </body>
 </html>
