background + sidebar werkt

--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,9 @@
 </div>
 <div class="main">
 <h3>text</h3>
-
+</div class="main">
+<div class="img">
+  <img src="pogo.jpg" alt="aa">
 </div>
 </body>
 </html>
