--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
       <link rel="stylesheet" href="style.css">
     </head>
 <body>
-<div class="sidebar">
-<a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a>
-<a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My work</a>
-<a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact me</a>
-</div>
 <div class="background">
-  <h3>text</h3>
-
+  <div class="sidebar">
+    <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a>
+    <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My work</a>
+    <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact me</a>
+  </div>
+  <div class="main">
+  <h3>lorem</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+</div class="main">
+<div class="img">
+  <img src="pogo.jpg" alt="aa">
 </div>
 </body>
 </html>
