--- a/Badges.html
+++ b/Badges.html
@@ -5,14 +5,32 @@
     </head>
   <body>
     <div class="sidebar">
-      <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a>
-      <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My work</a>
-      <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact me</a>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a></li>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My badges</a></li>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Projecten.html">My projects</a></li>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact me</a></li>
+    </div>
     </div>
     <div class="main">
-      <h3>Lorem</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h3>Mijn badges</h3>
+      <p>Voor mijn school volg ik informatica, waarbij ik aan badges werk.</p>
+      <p>Badges zijn een soort kleine projecten, hier staan een paar van mijn favorieten</p>
     </div>
+
+    <div class="gallery">
+      <a target="_blank" href="Javascript_Logo.png">
+        <img src="Javascript_Logo.png" width="240px" height="240px">
+      </a>
+    <div class="description">Javascript voor web is een module waarin je kleine web pagina's maakt met Javascript</div>
+    </div class="gallery">
+
+    <div class="gallery">
+      <a target="_blank" href="joker.png">
+        <img src="joker.png" width="240px" height="240px">
+      </a>
+    <div class="description">Voor de Joker badge mag je zelf een project maken, ik heb met mijn vrienden een spel voor een Game Jam gemaakt. Eeen Game Jam is een soort competitie waarin je binnen een bepaald aantal tijd een spel maakt</div>
+    </div class="gallery">
+
 
 
 
@@ -26,5 +44,4 @@
 
   </div>
 
-
-  </html>
+</html>
