--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     </head>
   <body>
     <div class="sidebar">
-      <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a>
-      <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My work</a>
-      <a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact me</a>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a></li>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My badges</a></li>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Projecten.html">My projects</a></li>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Contact.html">Contact me</a></li>
     </div>
     <div class="main">
-      <h3>Lorem</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <h3>About me</h3>
+      <p>Ik ben Jasper van Heusden, een leerling van het Metis Montessori Lyceum.</p>
 
 
 
