--- a/projecten.html
+++ b/projecten.html
@@ -12,9 +12,11 @@
     </div>
     </div>
     <div class="main">
-      <h3>Mijn projecten</h3>
-      <p>Ik heb op school naast badges ook aan projecten gewerkt, hieronder staan mijn favorieten.</p>
+      <div class="txtborder">
+        <h3>Mijn projecten</h3>
+        <p>Ik heb op school naast badges ook aan projecten gewerkt, hieronder staan mijn favorieten.</p>
     </div>
+  </div>
 
     <div class="gallery">
       <a target="_blank" href="robot.jpg">
@@ -30,6 +32,12 @@
     <div class="description">Time and Time Again is een spel dat ik met 2 vrienden heb gemaakt voor een Game Jam. We hebben dit spel in 7 dagen gemaakt.</div>
     </div class="gallery">
 
+    <div class="gallery">
+      <a target="_blank" href="css2fll.png">
+        <img src="css2fll.png" width="240px" height="240px">
+      </a>
+    <div class="description">De First Lego League is een lego robotica competitie. Voor de FLL moet je met een team een robot maken die zo veel mogelijk challenges kan binnen een bepaald aantal tijd.</div>
+    </div class="gallery">
 
 
 
