--- a/index.html
+++ b/index.html
@@ -11,15 +11,24 @@
 
     </div>
     <div class="main">
+      <div class="txtborder">
+        <h3>About me</h3>
+        <p>Ik ben Jasper van Heusden, een leerling van het Metis Montessori Lyceum. Ik zit in 3 vwo, en ik ben 15 jaar oud. Ik doe nu sinds de 1e klas het Coderclass programma waarin ik dingen zoals websites en games programeer.</p>
+      </div>
 
-      <h3>About me</h3>
-      <p>Ik ben Jasper van Heusden, een leerling van het Metis Montessori Lyceum. Ik zit in 3 vwo, en ik ben 15 jaar oud. Ik doe nu sinds de 1e klas het Coderclass programma waarin ik dingen zoals websites en games programeer.</p>
-      <h3>Contact</h3>
-      <p>Je kan contact met mij krijgen via het e-mail address 24484@edu.msa.nl</p>
+
+
+      <div class="contact">
+      <div class="txtborder">
+        <h3>Contact</h3>
+        <p>Je kan contact met mij krijgen via het e-mail address 24484@edu.msa.nl</p>
+      </div>
 
 
 
 </div>
+</div>
+
 </body>
 
 
