links correct gemaakt

--- a/projecten.html
+++ b/projecten.html
@@ -3,13 +3,13 @@
   <head>
       <link rel="stylesheet" href="style.css">
     </head>
-  <body>
-    <div class="sidebar">
-      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a></li>
-      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My badges</a></li>
-      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Projecten.html">My projects</a></li>
+    <body>
+      <div class="sidebar">
+        <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\index.html">About me</a></li>
+        <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\Badges.html">My badges</a></li>
+        <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\projecten.html">My projects</a></li>
 
-    </div>
+      </div>
     </div>
     <div class="main">
       <div class="txtborder">
