--- a/Badges.html
+++ b/Badges.html
@@ -4,12 +4,13 @@
       <link rel="stylesheet" href="style.css">
     </head>
   <body>
-    <div class="sidebar">
-      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a></li>
-      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My badges</a></li>
-      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Projecten.html">My projects</a></li>
 
-    </div>
+      <div class="sidebar">
+        <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\index.html">About me</a></li>
+        <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\Badges.html">My badges</a></li>
+        <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\projecten.html">My projects</a></li>
+
+      </div>
     </div>
     <div class="main">
       <div class="txtborder">
