--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     </head>
   <body>
     <div class="sidebar">
-      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\index.html">About me</a></li>
-      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Badges.html">My badges</a></li>
-      <li><a href="C:\Users\Grubl\OneDrive\Documentos\portfolio\Projecten.html">My projects</a></li>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\index.html">About me</a></li>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\Badges.html">My badges</a></li>
+      <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\projecten.html">My projects</a></li>
 
     </div>
     <div class="main">
