html 5 tag voor de footer, ik zie de use van html 5 niet nuttig voor iets anders

--- a/Badges.html
+++ b/Badges.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <link rel="stylesheet" href="style.css">
-    </head>
+  </head>
   <body>
 
       <div class="sidebar">
@@ -49,11 +49,10 @@
 
   </body>
 
-
-  <div class="footer">
-
+  <footer>
    ඞ
 
-  </div>
+
+  </footer>
 
 </html>
