--- a/Badges.html
+++ b/Badges.html
@@ -5,12 +5,12 @@
   </head>
   <body>
 
-      <div class="sidebar">
-        <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\index.html">About me</a></li>
-        <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\Badges.html">My badges</a></li>
-        <li><a href="C:\Users\Grubl\OneDrive\Documentos\GitHub\portfolio\projecten.html">My projects</a></li>
+    <div class="sidebar">
+      <li><a href="index.html">About me</a></li>
+      <li><a href="#">My badges</a></li>
+      <li><a href="projecten.html">My projects</a></li>
 
-      </div>
+    </div>
     </div>
     <div class="main">
       <div class="txtborder">
