--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
         <h3>About me</h3>
         <p>Ik ben Jasper van Heusden, een leerling van het Metis Montessori Lyceum. Ik zit in 3 vwo, en ik ben 15 jaar oud. Ik doe nu sinds de 1e klas het Coderclass programma waarin ik dingen zoals websites en games programeer.</p>
       </div>
-      <div class="contact">
-      <div class="txtborder">
-        <h3>Contact</h3>
-        <p>Je kan contact met mij krijgen via het e-mail address 24484@edu.msa.nl</p>
+      <div class="plaatjeik">
+      <img src="ik portfolio.jpg" width="720px" height="360px">
       </div>
-</div>
+
+
 </div>
 </body>
 <footer>
- ඞ
+  Je kan contact met mij krijgen via het e-mail address 24484@edu.msa.nl
 </footer>
 </html>
